--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <h1>A Tasty Croissant</h1>
-    <img src="/images/croissant.jpg" alt="" class="croissant-photo" />
+    <img
+      src="/images/croissant.jpg"
+      alt="croissant photo"
+      class="croissant-photo"
+    />
 
     <footer>
       <a href="/"> Home</a>
