--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Contact</title>
+    <title>Contact fluffy croissants</title>
+    <meta name="description" content="contact us by email" />
   </head>
   <body>
     <h1>Contact us</h1>
     <p>
-      Email us at
+      Feel free to email us at
       <a href="mailto:yummy@fluffycroissants.com">yummy@fluffycroissants.com</a>
-      for more info
+      <div>We would love to hear from you!</div>
     </p>
     <footer>
-      <a href="/"> Home</a>
-      <a href="/photo.html"> Photo</a>
-      <a href="/contact.html"> Contact</a>
+      <a href="/" title="Homepage"> Home</a>
+      <a href="/photo.html" title="Photo of a croissant"> Photo</a>
+      <a href="/contact.html" title="Contact us"> Contact</a>
     </footer>
   </body>
 </html>
