--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Croissant</title>
+    <title>Croissants Explained</title>
+    <meta name="description" content="Indulge in a tasty croissant" />
   </head>
   <body>
     <h1>Croissants</h1>
@@ -17,9 +18,9 @@
     </p>
 
     <footer>
-      <a href="/"> Home</a>
-      <a href="/photo.html"> Photo</a>
-      <a href="/contact.html"> Contact</a>
+      <a href="/" title="Homepage"> Home</a>
+      <a href="/photo.html" title="Photo of a croissant"> Photo</a>
+      <a href="/contact.html" title="Contact us"> Contact</a>
     </footer>
   </body>
 </html>
