--- a/photo.html
+++ b/photo.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Photo</title>
+    <title>Photo of a delicious croissant</title>
+    <meta
+      name="description"
+      content="A tasty croissant captured with a camera"
+    />
   </head>
   <body>
     <h1>A Tasty Croissant</h1>
@@ -17,9 +21,9 @@
     />
 
     <footer>
-      <a href="/"> Home</a>
-      <a href="/photo.html"> Photo</a>
-      <a href="/contact.html"> Contact</a>
+      <a href="/" title="Homepage"> Home</a>
+      <a href="/photo.html" title="Photo of a croissant"> Photo</a>
+      <a href="/contact.html" title="Contact us"> Contact</a>
     </footer>
   </body>
 </html>
